--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,43 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ body {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300;
+ }
+.jumbotron{
+  background-image: url('http://i.huffpost.com/gen/1752628/images/o-TEXTING-facebook.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.message a{
+  color:purple;
+    &:hover{
+      text-decoration: none;
+      color:#DB70DB;
+    }
+}
+
+.messages{
+  text-align:center;
+}
+
+.jumbotron h1{
+  font-size:100px;
+  font-family:monospace;
+  color:#447a5f;
+}
+
+.brand-name{
+}
+
+.btn-unique{
+  background-color:#fa6385;
+  color:white;
+    &:hover{
+      background-color: #f98ca4;
+      color:white;
+    }
+}
