--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
   <div class="container">
+    <div class="jumbotron">
+      <h1 class="brand-name">Texter</h1>
+      <p>...</p>
+      <%= link_to 'Send A Message!', new_message_path, class:'btn btn-lg btn-unique'%>
+    </div>
     <%= flash[:notice] %>
     <%= yield %>
 
