--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,14 @@
-<h1>Messages</h1>
+<div class="row">
+  <div class="col-sm-12 messages">
+    <h1>Messages</h1>
+    <%= link_to 'Add a new message', new_message_path %>
+  </div>
+</div>
 
 <% @messages.each do |message| %>
-  <%= link_to 'From: ' + message.from, message_path(message) %>
+  <div class="row">
+    <div class="col-sm-12 messages">
+      <h3 class="message"><%= link_to 'From: ' + message.from, message_path(message) %></h3>
+    </div>
+  </div>
 <% end %>
-
-<%= link_to 'Add a new message', new_message_path %>
