--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
   <div class="container">
     <div class="jumbotron">
       <h1 class="brand-name">Texter</h1>
-      <p>...</p>
-      <%= link_to 'Send A Message!', new_message_path, class:'btn btn-lg btn-unique'%>
+      <br />
+      <br />
+      <%= link_to 'Send A Message!', new_message_path, class:'btn btn-lg btn-pink'%>
+      <%= link_to 'Address Book', contacts_path, class:'btn btn-lg btn-orange' %>
     </div>
     <%= flash[:notice] %>
     <%= yield %>
-
   </div>
+
 </body>
 </html>
