--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-  <div class="col-sm-12 messages">
+  <div class="col-sm-12 centered">
     <h1>Messages</h1>
   </div>
 </div>
 
 <% @messages.each do |message| %>
   <div class="row">
-    <div class="col-sm-12 messages">
+    <div class="col-sm-12 centered">
       <h3 class="message"><%= link_to 'From: ' + message.from, message_path(message) %></h3>
     </div>
   </div>
