--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,6 +1,6 @@
 <h1>Add a contact</h1>
 
-<%= form_for @contact do |f| %>
+<%= form_for @contact, remote: true do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :phone %>
