--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,9 +1,12 @@
-<h1>Add a contact</h1>
-
-<%= form_for @contact, remote: true do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :phone %>
-  <%= f.text_field :phone %>
-  <%= f.submit %>
-<% end %>
+<div class="add-contact-form well">
+  <h1>Add a contact</h1>
+  <div class="notice">
+  </div>
+  <%= form_for @contact, remote: true do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <%= f.label :phone %>
+    <%= f.text_field :phone %>
+    <%= f.submit %>
+  <% end %>
+</div>
