--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -2,7 +2,7 @@
 </div>
 
 <div class="centered">
-  <h1>Address Book</h1>
+  <h1 class="address-book-header">Address Book</h1>
   <%= link_to 'Add A Contact', new_contact_path, remote: true, class:'add-contact' %>
 </div>
 
