add contact form will ajax load into page and ajax load new contact onto contacts list when saved

--- a/app/views/contacts/create.js.erb
+++ b/app/views/contacts/create.js.erb
@@ -1,3 +1,4 @@
 $('.add-contact').show();
 $('.add-contact-form').remove();
-$('.notice').html("<%= flash[:notice] %>");
+$('.contacts-list').html("<%= j render('contacts_table') %>")
+$('.success-notice').html("<%= flash[:notice] %>");
