--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,31 +1,12 @@
-<div class="new-contact">
+<div class="success-notice">
 </div>
-
 <div class="centered">
-  <h1 class="address-book-header">Address Book</h1>
+  <h1>Address Book</h1>
   <%= link_to 'Add A Contact', new_contact_path, remote: true, class:'add-contact' %>
 </div>
 
-<% if @contacts.any? %>
-    <table class="table table-striped centered">
-      <thead>
-        <tr>
-          <th class="centered"><h1>Name</h1></th>
-          <th class="centered"><h1>Phone Number</h1></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @contacts.each do |contact| %>
-          <tr>
-            <td><h3><%= contact.name %></h3></td>
-            <td><h3><%= contact.phone %></h3></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-<% else %>
-  <h4>No contacts have been added to your Address Book.</h4>
-<% end %>
-
+<div class="contacts-list">
+  <%= render 'contacts_table' %>
+</div>
 <div class="spacer">
 </div>
