link to send message ajax loads message form, error shows on form when unable to save

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
       <h1 class="brand-name">Texter</h1>
       <br />
       <br />
-      <%= link_to 'Send A Message!', new_message_path, class:'btn btn-lg btn-pink'%>
+      <%= link_to 'Messages', messages_path, class:'btn btn-lg btn-pink'%>
+
       <%= link_to 'Address Book', contacts_path, class:'btn btn-lg btn-orange' %>
     </div>
     <%= yield %>
