--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,16 +1,15 @@
+<div class="success-notice-message">
+</div>
 <div class="row">
   <div class="col-sm-12 centered">
+    <%= link_to 'Send A Message!', new_message_path, remote: true, class:'add-message'%>
     <h1>Messages</h1>
   </div>
 </div>
 
-<% @messages.each do |message| %>
-  <div class="row">
-    <div class="col-sm-12 centered">
-      <h3 class="message"><%= link_to 'From: ' + message.from, message_path(message) %></h3>
-    </div>
-  </div>
-<% end %>
+<div class="messages">
+  <%= render 'messages' %>
+</div>
 
 <div class="spacer">
 </div>
