message ajax load into messages page when saved

--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,1 +1,3 @@
 $('.success-notice-message').html("<%= flash[:notice] %>");
+$('.add-message-div').remove();
+$('.messages').html("<%= j render('messages') %>")
