add contact, add message links styled

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,3 +73,14 @@
 .spacer{
   margin:100px;
 }
+
+.add-link{
+  background-color:#55ab84;
+  color:white;
+    &:hover{
+      text-decoration: none;
+      color:white;
+      background-color:#6fd8a9;
+
+    }
+}
