--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="success-notice">
 </div>
 <div class="centered">
-  <%= link_to 'Add A Contact', new_contact_path, remote: true, class:'add-contact' %>
+  <%= link_to 'Add A Contact', new_contact_path, remote: true, class:'add-contact btn btn-lg add-link' %>
   <h1>Address Book</h1>
 </div>
 
