--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,7 +2,7 @@
 </div>
 <div class="row">
   <div class="col-sm-12 centered">
-    <%= link_to 'Send A Message!', new_message_path, remote: true, class:'add-message'%>
+    <%= link_to 'Send A Message!', new_message_path, remote: true, class:'add-message btn btn-lg add-link'%>
     <h1>Messages</h1>
   </div>
 </div>
