mass text button, number model

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,14 @@
 <div class="success-notice-message">
 </div>
+
+<div class="mass-text">
+</div>
+
 <div class="row">
   <div class="col-sm-12 centered">
     <%= link_to 'Send A Message!', new_message_path, remote: true, class:'add-message btn btn-lg add-link'%>
+    <%= link_to 'Send A Mass Text!', new_number_path, remote: true, class:'add-message btn btn-lg add-link'%>
+
     <h1>Messages</h1>
   </div>
 </div>
