--- a/app/views/numbers/new.js.erb
+++ b/app/views/numbers/new.js.erb
@@ -1,1 +1,5 @@
-$('.mass-text').html("foo");
+$('.add-message').show();
+$('.add-mass').hide();
+$('.mass-text').show();
+$('.message-form').hide();
+$('.mass-text').html("<%= j render('massform') %>");
